@@ -1,3 +1,11 @@
+2017-12-07  Mark Wielaard  <mark@klomp.org>
+
+	* run-readelf-variant.sh: New test.
+	* testfile-ada-variant.bz2: New testfile.
+	* Makefile.am (TESTS): Add run-readelf-variant.sh.
+	(EXTRA_DISTS): Add run-readelf-variant.sh and
+	testfile-ada-variant.bz2.
+
 2017-11-29  Mark Wielaard  <mark@klomp.org>
 
 	* run-readelf-loc.sh: Adjust expected loc list output.
